# swadel-monolith

./: .gitignore  INSTALL.md  README.md  car_giphy.m4v  objdetect.py  runtime.py  vehicle_measures.xlsx
app/data/training/HandWrittenDigitsDataGAN/: DiscrimatorNet.py  GeneratorNet.py  dataset.py  optimize.py  run.py  vision.py
app/index/: DVLAMetadataIndex.py  dvla_memory_tag_index.json
app/online/OpenCV/: write.cpp
app/online/SpatialInformation/: SpatialInformationOnline.py
app/online/SpatialInformation/objdetect/: alpr.cpp
app/online/SpatialInformation/video/: opencv_camera_display.h
app/online/SpeechRecognition/: speech_sigproc.py
app/online/TextRecognition/: main.cpp  test.py  testlib.py  text_detection.cpp  text_detection.hpp  text_recognition.cpp  text_recognition.hpp
app/online/TextRecognition/cmake_utils/: CMakeFuncs.txt
app/online/TextRecognition/main/: CMakeLists.txt  Makefile  __init__.py  capsulethunk.h  command.txt  file.cpp  libmain.cpp  list_file.h  pymain.py  setup.py  textdetection.cpp  textdetection.h
app/plan/: VehicleDetectionByPlan.py  WindSpeedByPlan.py
app/service/: ImageSegmentationService.py  ImageStitchingService.py  LicensePlateIdentifierService.py  NetworkService.py  PlotFeatureExtractionService.py  SpatialInformationService.py  TextToSpeech.py
app/specify/COCO-Dataset/annotations/: COCOKeypointsAnnotationConverter.php  composer.json
app/specify/COCO-Dataset/annotations/annfiles/: person_keypoints_val2017.xml
app/specify/HDF5/: HDF5WriteBySpecify.py
conf/: gb.conf
models/ssdlite_mobilenet_v2_coco_2018_05_09/: frozen_inference_graph.mapping  frozen_inference_graph.xml
models/vehicle-attributes-recognition-barrier-0039/FP16/: vehicle-attributes-recognition-barrier-0039.xml
notebooks/: MODEL_PATH  Model-Converter.ipynb  Model-Downloader.ipynb  binary_file.ipynb  image-stitching.ipynb  onnx.ipynb  opencv_contrib_hmm.ipynb  pycocoDemo.ipynb
notebooks/.ipynb_checkpoints/: Model-Converter-checkpoint.ipynb  Model-Downloader-checkpoint.ipynb  Untitled-checkpoint.ipynb  binary_file-checkpoint.ipynb  image-stitching-checkpoint.ipynb  onnx-checkpoint.ipynb  opencl-checkpoint.ipynb  opencv_contrib_hmm-checkpoint.ipynb
notebooks/ir/models/: discriminator.mapping  discriminator.xml  generator.mapping  generator.xml
